@@ -19,6 +19,7 @@ version 0.99.5-beta XX-MMM-2010
  . [FIX] Templates & Tests: call CC_DIRECTOR_END() on AppDelegate Terminate
  . [FIX] Templates: Use LLVM-GCC as default compiler
  . [FIX] Tests: AtlasTest renamed to LabelTest
+ . [FIX] Tests: CocosLive Demo: added requestRank tests
  . [FIX] TextureCache: JPEG workaround (issue #866) is only applied on iOS >= 4 (issue #932)
  . [3RD] libpng: updated to v1.2.44 (libpng is only used by a cocos2d test)
  
